app/assets/stylesheets/custom.css.scss
$error-red: #FE1F0D;
$site-blue: #0c93cb;
legend {
    font-weight: bold;
    text-align:left;
    width:90%;

}
.tt-query,
.tt-hint {
    height: 30px;
    padding: 8px 12px;
    font-size: 24px;
    line-height: 30px;
    border: 2px solid #ccc;
    border-radius: 8px;
    outline: none;
    width: 100%;
}

.tt-query {
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.tt-hint {
    color: #999

}

.tt-dropdown-menu {
    width: 100%;
    margin-top: 12px;
    padding: 8px 0;
    background-color: #fff;
    border: 1px solid #ccc;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 8px;
    box-shadow: 0 5px 10px rgba(0,0,0,.2);
    position:relative !important;

}

.tt-suggestion {
    padding: 3px 20px;
    font-size: 18px;
    line-height: 24px;
}

.tt-suggestion.tt-is-under-cursor { /* UPDATE: newer versions use .tt-suggestion.tt-cursor */
    color: #fff;
    background-color: #0097cf;

}

.tt-suggestion p {
    margin: 0;
}
input[type='submit'] {
    align: center;
    min-height: 40px;
    background-color: #0c93cb;
    font-size : 1.4em;
    font-weight: bold;
    color:#fed271;
    border-radius:3px;
    border-color: #FED271;
    border-style: solid;
    font-family: Verdana,Helvetica,Arial;
    

}
input[type='file'] {
    background-color: #0c93cb;
    font-size : 1.4em;
    font-weight: bold;
    color:#fed271;
}

input[type='text'] {
    width:100%;
}

body  {
    width:98%;
    background-color:#c4c4c4;
    background-image:asset-data-url('background1.png');
    background-repeat:repeat-x;
    font-family: Verdana, Helvetica, Arial;
    font-size: .9em;
    overflow:visible;
    y-overflow:scroll;
}

div .resetLayout {
    clear:both;
    margin-top: 19px;
}

.emphasis {
    font-family : 'Open Sans', sans-serif;
    font-weight : 700 ; 
    font-size : 1.2em ; 
    font-align : left ;
}

.hund_button { 
    float:center !important;
    text-align: center;
    background-color: #0c93cb;
    max-width: 90%;
    min-height: 125px;
    padding:3%;
    font-size:1.4em;
    color:#fed271;
    cursor:pointer;
    border-radius:5px;
    border-color: #FED271;
    border-style: solid;
    font-weight: bold;
    vertical-align: bottom;
}

.buttonBG {
    background-color: #0c93cb;
    height:70%;
    width:100%;
    max-width: 228px;
    max-height:75%;
    border-radius: 8px;
}
.CGbuttonalign {
    float: right;

    
}

.buttonB {
    font-family: Verdana,Helvetica,Arial;
    text-align: center;
    float:center;
    background-color: #0c93cb;
    min-height:70px;
    min-width:221px;
    width:100%;
    height:100%;
    padding:25px;
    float: center;
    font-size:1.4em;
    color:#fed271;
    background: url('/assets/orangebubbleBUTTON.gif');
    padding-right:16px;
    background-color:transparent;
    background-position:left;
    background-repeat:no-repeat;
    border-radius:8px;
    border-color: #FED271;
    border-style: solid;
    font-weight: bold;
    vertical-align: bottom;
}    

.button {

    text-align: center;
    width:80%!important;
    float:center;
    background-color: #0c93cb;
    height:70px;
    padding:20px;
    font-size:1.4em;
    color:#fed271;
    cursor:pointer;
    border-radius:8px;
    border-color: #FED271;
    border-style: solid;
    font-weight: bold;
    vertical-align: bottom;
    background-image: url(/images/favicon.ico);
    background-repeat: no-repeat;
    background-position: left;
    padding-left: 16px;
}

.next { 
    font-family: Verdana,Helvetica,Arial;    
    float: right;
    background-color: #0c93cb;
    min-height:15%;
    padding:3px;
    font-size:1.2em;
    color:#fed271;    cursor:pointer;
    border-radius:3px;
    border-color: #FED271;
    border-style: solid;
    font-weight: bold;
    text-align: center;
    vertical-align: bottom;
    align:right;
}
.prev {
    font-family: Verdana,Helvetica,Arial;
    float: left;
    background-color: #0c93cb;
    width:60px;
    min-height:15%;
    padding:3px;
    font-size:1.2em;
    color:#fed271;
    cursor:pointer;
    border-radius:3px;
    border-color: #FED271;
    border-style: solid;
    font-weight: bold;
    text-align: center;
    background-image: url(/images/favicon.ico);
}
@mixin heading {
    color: #0c93cb;
    font-family: 'Open Sans', sans-serif;
    text-align: center;
}
h1 {
    @include heading ; 
    font-size: 1.6em;
}
h2 {
    @include heading ; 
    font-size: 1.3em;
}
h3 {
    @include heading ; 
    text-align:left;
    font-size: 1.1em;
}
h1 a {
    text-decoration:none;
    color: #0c93cb;
    font-family: 'Open Sans', sans-serif;

}

h4 {
    color: #0c93cb;
    padding-left:100px;
}
li {
    font-family: Verdana,Helvetica,Arial;
    font-size:1.4em;
    color: #EED090;  
}

.banner {
    padding-left : 30px ;
    width:100%;
    clear:both;
    text-align: left;
    text-size: 1.9em;
}
.title {
    text-align: left ; 
    font-size: 1.9em;
}
.logo {
    float : left ; 
    width:100px;

}
.signupLinks {
    float : left ; 
    margin-left: 130px;
    width : 260px;

}
div.span7 {
    align:center;
}

div.span9 {
    resize:auto;
    max-width:80%;    
}

div.span12 {
    background: -webkit-linear-gradient(top, #FAD383 , #c4c4c4); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(bottom, #FAD383, #c4c4c4); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(top, #FAD383, #c4c4c4); /* For Firefox 3.6 to 15 */
    background: linear-gradient(to bottom, #FAD383, #c4c4c4); /* Standard syntax */
    //background: url(''); 
    background-size: 100% 100%;
    height:100% ; 
    width:96%;
    min-width:500px;
    margin:2%;
    padding-right:2%;
    padding-left:2%;
    padding-bottom: 2%;
    border: 2px solid #0c93cb;
    overflow:visible;
    background-repeat:repeat-x;
    border-radius:20px;
    clear:both;
    float:left;
}

div.wide {
    width:100%;
    min-width:600px;
}

.bubble {
    width:100px;

}
.fullCol {
    float: center ; 
    width:96%;
    margin:1%;
    padding:1%;
    border: 2px solid #ccc;
    overflow:visible;
    background-color:#ffe;
    border-radius: 20px;
    
}   

div.span2 {
    width:31%;
    min-width:200px;

}

div.bubbleimg {
    max-width:20%;
}
.col1 {
    width:100%;
    float: left ;
    min-height:150px;
    min-width:250px;
    margin:0%;
    padding:1%;
    border: 2px solid #ccc;
    overflow:visible;
    background-color:#ffe;
    border-radius:20px;
    font-family: Verdana,Helvetica,Arial;
}
.col2 {
    width:100%;
    min-height:150px;
    margin:0%;
    padding:3%;
    border: 2px solid #ccc;
    overflow:hidden;
    background-color:#ffe;
    border-radius:20px;
    font-family: Verdana,Helvetica,Arial;
}
.col3 {
    width:100%;
    min-width:200px;
    margin:0%;
    padding:3%;
    border: 2px solid #ccc;
    overflow:hidden;
    background-color:#ffe;
    border-radius:20px;
    font-family: Verdana,Helvetica,Arial;
}

ul.nav-pills li a {
    background-color: $site-blue;
    color: #ffd372;
}

@mixin col {
    min-width:45%;
    height: 100%;
    padding:3%;

    margin-top:20px;
    border: 2px solid #ccc;
    overflow:hidden;
    background-color:#ffe;
    border-radius:20px;
    font-family: Verdana,Helvetica,Arial;
}
.colA {
    @include col;
    float:left;
}

.colB {
    @include col;
    text-align:center;
    float: right !important ;

}
.colC {
    text-align:center;
    min-width:440px;
    margin:1%;
    padding:3%;
    border: 2px solid #ccc;
    overflow:hidden;
    background-color:#ffe;
    border-radius:20px;
    font-family: Verdana,Helvetica,Arial;
}

.colD {
    text-align:center;
    float:right;
    min-width:45%;
    margin:0%;
    padding:3%;
    border: 2px solid #ccc;
    overflow:hidden;
    background-color:#ffe;
    border-radius:20px;
    font-family: Verdana,Helvetica,Arial;
}
.dropdown {
    max-width:220px;
    float: left;

}

.copyright {
    float:right ; 
}

ul .steps {
    float:center;
}
.footerMenu {
    width: 50%;
    margin-left: 1%;
    float:left;
}
.footerMenu ul  {

    padding: 0;
    margin: 0;
    list-style-type: none;
}
.footerMenu a:hover {
    text-decoration: underline;
}
.footerMenu a {

    width: 6em;

    text-decoration: none;
    color: $site-blue;

    padding: 0.2em 0.6em;

}
li.footer {
    list-style: none;
    display:inline;
}

a img {
    border: none;
}

a {
    color: $site_blue ;
}

.clear {
    clear: both;
    height: 0;
    overflow: hidden;
}

ul li .footer{

    list-style: none;
}
ul#steps { 
    width:99%;
    align:center;
}

a img {
    border: none;
}


.clear {
    clear: both;
    height: 0;
    overflow: hidden;
}

#container {
    width: 100%;
    margin: 0 auto;
    background-color: #FFF;
    padding: 20px 40px;
    border: solid 1px black;
    margin-top: 5%;
}

ul {
    text-align: left;
}

ul li {

    margin: 5px;
    padding: 5px;
    color:  $site-blue;

}
ul li span {
    color:  #0c93cb;
    margin: 5px;
}

#steps {
    list-style: none outside none;
    width:97%;
    overflow: hidden;
    margin: 2px;
    padding: 3px;
    background-image: asset-data-url('background2.png');
    border-style: solid;
    border-color: #F8D286;
    border-width: 3px;
    color:#fed271;
    background-color: #0c93cb;
}

#steps li.current {
    color: #0c93cb;
    background-color: #F8D286;
    font-weight: bold;
    font-size: 1.9em;
    border-style: solid;
    border-color: #0c93cb;
    border-width: 3px;
    
}

#flash_notice, #flash_error, #flash_alert {
    padding: 5px 8px;
    margin: 10px 0;
}

#flash_notice {
    background-color: #CFC;
    border: solid 1px #6C6;
}

#flash_error, #flash_alert {
    background-color: #FCC;
    border: solid 1px #C66;
}

.fieldWithErrors {

}

.error_messages {
    color: $error-red;
    width: 50%;
    border: 2px solid $error-red;
    border-radius:10px;
    padding: 0px;
    padding-bottom: 12px;
    margin-bottom: 20px;
    background-color: #f0f0f0;
    font-size: 12px;
}
.error_messages ul li {
    color: $error-red;
}

.ui-widget button {
    float:right
}

.typeahead {
    z-index:inherit;
}
.error_messages h2 {
    text-align: left;
    font-weight: bold;
    padding: 5px 10px;
    font-size: 12px;
    margin: 0;
    background-color: $error-red;
    color: #fff;
}

.error {
    color : red;
}

.error_messages p {
    margin: 8px 10px;
}

vv.error_messages ul {
    margin: 0;
}
div.error_explanation h2 {
    font-size:0.9em;
    float:left;
    line-height:20px;
    margin-bottom:0px;
    margin-top:0px;
}
div.error_explanation ul li {
    color:red;
    font-weight:bold;
    font-size:0.9em;
    float:left;
    line-height:20px;
    list-style: circle;
}

